[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tng-cli"
path = "src/main.rs"

[dependencies]
ppmpam = { path = "../ppmpam" }
decoder = { path = "../png_decoder/decoder" }
tng = { path = "../tng" }
anstream = "1.0"
owo-colors = "4.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
